# loki

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  lokiConfig.cmake.in
.github/workflows/: build.yml  check-clang-format.yml  check-cmake-format.yml  check-format.yml  test.yml
cmake/: All.hpp.in  DependenciesHelpers.cmake  FindSphinx.cmake  InstallHelpers.cmake  LTOHelpers.cmake  LocalConfig.template.cmake  LoggingHelpers.cmake  MacroEnsureOutOfSourceBuild.cmake  ModulesHelpers.cmake  config_cmake.txt  lokiConfig.cmake.in
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/gh-pages/master/: Doxyfile
docs/gh-pages/master/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/gh-pages/master/html/.doctrees/: environment.pickle  index.doctree
docs/gh-pages/master/xml/: _a_d_l_helpers_8hpp.xml  _abstract_frame_8cpp.xml  _abstract_frame_8hpp.xml  _abstract_text_box_8hpp.xml  _anim_editor_8cpp.xml  _anim_editor_8hpp.xml  _animated_glyph_8cpp.xml  _animated_glyph_8hpp.xml  _animated_text_8cpp.xml  _animated_text_8hpp.xml  _animated_text_style_8cpp.xml  _animated_text_style_8hpp.xml  _animation_data_8cpp.xml  _animation_data_8hpp.xml  _animation_view_data_8cpp.xml  _animation_view_data_8hpp.xml  _animator_8hpp.xml  _animator_8hxx.xml  _annotated_text_8cpp.xml  _annotated_text_8hpp.xml  _capsule_8cpp.xml  _capsule_8hpp.xml  _combine_hash_8hpp.xml  _event_handler_8cpp.xml  _event_handler_8hpp.xml  _event_text_box_controller_8cpp.xml  _event_text_box_controller_8hpp.xml  _input_settings_8cpp.xml  _input_settings_8hpp.xml  _input_state_8hpp.xml  _input_type_8cpp.xml  _input_type_8hpp.xml  _interpolate_8hpp.xml  _interpolate_8hxx.xml  _iter_adapters_8hpp.xml  _iter_hash_8hpp.xml  _keyframe_8hpp.xml  _layer_view_8hpp.xml  _list_controller_8cpp.xml  _list_controller_8hpp.xml  (+262 more)
docs/sphinx/: conf.py  index.rst
schemas/: animation.schema.json  sfml.schema.json  text.schema.json
src/loki-app/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  registerLokiTypes.cpp  registerLokiTypes.hpp
src/loki-runtime/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  registerLokiTypes.cpp  registerLokiTypes.hpp
src/loki/anim/: All.hpp  Animated.cpp  Animated.hpp  Animation.cpp  Animation.hpp  AnimationData.cpp  AnimationData.hpp  AnimationViewData.cpp  AnimationViewData.hpp  Animator.hpp  CMakeLists.txt  Keyframe.hpp
src/loki/anim/impl/: ADLHelpers.hpp  Animator.hxx  TemplateHelpers.hpp
src/loki/common/: All.hpp  CMakeLists.txt  Color.hpp  IterAdapters.hpp  Matrix.hpp  Random.cpp  Random.hpp  VertexArrayIterator.cpp
src/loki/common/hashing/: CombineHash.hpp  IterHash.hpp  PairHash.hpp  TupleHash.hpp
src/loki/components/: CMakeLists.txt  registerComponents.cpp  registerComponents.hpp
src/loki/components/graphics/: CircleShapeComponent.cpp  CircleShapeComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TileMapComponent.cpp  TileMapComponent.hpp
src/loki/core/: CMakeLists.txt
src/loki/core/hash/: CMakeLists.txt  CombineHash.hpp  IterHash.hpp  PairHash.hpp  TupleHash.hpp
src/loki/core/i18n/: I18nData.cpp  I18nData.hpp  I18nData.hxx  LangData_old.cpp  LangData_old.hpp
src/loki/core/json/: All.hpp  CMakeLists.txt  Color.hpp  Joystick.hpp  Json.hpp  Keyboard.hpp  Macros.hpp  Mouse.hpp  Optional.hpp  Path.hpp  Rect.hpp  Time.hpp  Variant.hpp  Vector2.hpp
src/loki/core/math/: All.hpp  CMakeLists.txt  Interpolate.hpp  Interpolate.hxx  Misc.hpp  Rect.hpp  Vector2.hpp  Vector2Ops.hpp  Vector4.hpp  Vector4.hxx
src/loki/core/reflection/: BaseObject.hpp  BasicTypesInfo.hpp  FieldInfo.hpp  ReflectionFactory.hpp  ReflectionFactory.hxx  SFMLTypesInfo.hpp  TypeInfo.hpp  basicTypesInfo.hpp  classAttributes.hpp  classMacros.hpp  enumMacros.hpp  fieldAttributes.hpp  reflectionUtils.hpp  sfmlTypesInfo.hpp
src/loki/core/res/: All.hpp  CMakeLists.txt  JsonResources.hpp  ResourceHandle.hpp  ResourceHolder.cpp  ResourceHolder.hpp
src/loki/core/rtti/: BaseObject.hpp  RuntimeObjectRegistry.hpp  rttiConcepts.hpp  rttiMacros.hpp
src/loki/core/runtimeObject/: BaseObject.hpp  RuntimeObjectRegistry.cpp  RuntimeObjectRegistry.hpp
src/loki/core/serialization/: ReflectToJson.hpp
src/loki/core/services/: ServiceRegistry.cpp  ServiceRegistry.hpp  ServiceRegistry.hxx
src/loki/core/states/: CMakeLists.txt  State.hpp  StateIndex.hpp  StateMachine.cpp  (+2 more)
src/loki/cutscene/: All.hpp  CMakeLists.txt  TimedAction.hpp  TimedAction.inl  dummy.cpp
src/loki/editor/: CMakeLists.txt
src/loki/graphics/: CMakeLists.txt
src/loki/gui/: All.hpp  CMakeLists.txt  Widget.cpp  Widget.hpp
src/loki/hash/: All.hpp  CMakeLists.txt  CombineHash.cpp  CombineHash.hpp  PairHash.hpp  TupleHash.hpp
src/loki/input/: All.hpp  CMakeLists.txt
src/loki/json/: All.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Optional.hpp  String.hpp  Vector2.hpp
src/loki/math/: All.hpp  CMakeLists.txt  LinAlg2D.cpp  LinAlg2D.hpp  Rect.hpp
src/loki/physics/: CMakeLists.txt  tmp.cpp  tmp.hpp
src/loki/screens/: All.hpp  CMakeLists.txt  Screen.cpp  Screen.hpp  Screen.inl  ScreenStack.cpp  ScreenStack.hpp  Signal.hpp
src/loki/shapes/: CMakeLists.txt  Capsule.hpp  RoundedRectangle.cpp  RoundedRectangle.hpp
src/loki/sprites/: All.hpp  CMakeLists.txt  Sprite.cpp  Sprite.hpp  SpriteData.hpp  SpriteViewData.hpp
src/loki/states/: All.hpp  CMakeLists.txt  State.hpp  StateMachine.cpp  Transition.hpp
src/loki/strings/: CMakeLists.txt
src/loki/styles/: All.hpp  CMakeLists.txt  TextStyle.cpp  TextStyle.hpp
src/loki/system/: CMakeLists.txt  main.hpp
src/loki/text/: All.hpp  AnimatedGlyph.hpp  AnimatedText.cpp  AnimatedText.hpp  AnimatedTextStyle.hpp  AnnotatedText.hpp  CMakeLists.txt  Stylesheet.cpp  Stylesheet.hpp  TextAnimationViewData.hpp
src/loki/tiles/: All.hpp  CMakeLists.txt  TileMapData.hpp  TileMapDataComponent.cpp  TileMapDataComponent.hpp  TileSetData.hpp
src/loki/tpl/: CMakeLists.txt  TemplateEngine.cpp
src/loki/window/: All.hpp  CMakeLists.txt  Style.cpp  Style.hpp  Window.cpp  Window.hpp
(+458 files in other folders)
